dynosaur/tests/fail/missing-strategy.stderr
error: expected `dyn(box)`
 --> tests/fail/missing-strategy.rs:3:25
  |
3 | #[dynosaur(DynMyTrait = dyn)]
  |                         ^^^

error: expected `dyn(box)`
 --> tests/fail/missing-strategy.rs:8:26
  |
8 | #[dynosaur(DynMyTrait2 = dyn MyTrait2)]
  |                          ^^^

error: aborting due to 2 previous errors

